--- a/.env.example
+++ b/.env.example
@@ -27,11 +27,12 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_USERNAME=e480673e440ef7
+MAIL_PASSWORD=093299d4146869
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=kortby@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
